--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Welcome to Davian Brown CPS3740 project.
 <form action="login.php" method="post">
 <br>Login ID: <input type="text" name="username"  required="required" >
 <br>Password: <input type="password" name="password"  required="required" >
-<input type="submit" value="Submit">
+<input type="submit"  name="btnSubmit" value="Submit">  <! If issue arises, get rid of name and leave it at value and type>
 </form>
 
 <HR>
